# attendance_machines

./: .dockerignore  .gitignore  AttendanceSystem.spec  DEPLOYMENT_GUIDE.md  README  README.md  README_STANDALONE.md  TimeAttendance.spec  alter_db.py  app.py  app_log.txt  build_standalone.bat  db.py  db_init.py  dev.bat  docker-compose.yml  docker_readme  emp.txt  employee_work_shift.xlsx  machines.txt  main.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  requirements_render.txt  sync.py  sync_log.txt  test_out.txt  test_output.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: .env.template  Dockerfile  build_exe.ps1
backend/scripts/: alter_db.py  apply_indexes.py  db_init.py  migrate_to_sqlite.py  seed_demo.py  test_zk.py
backend/src/: compat.py  config.py  database.py  main.py  migrate_detailed_leave_v3.py  migrate_full_emp_id.py  migrate_machine_id.py  migrate_meal_history.py  migrate_shift_category.py  normalize_shift_data.py  optimize_db.py  recover_machines.py  seed_shifts.py  sync_service.py
backend/static/: index.html
demo_data/: attendance.db
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scratch/: check_db_types.py  check_names.py  check_registry_data.py  mock_printer.py  simulate_checkin.py  test_connectivity.py
static/: index.html
tmp/: alter_db.py  check_excel.py  db_migrate.py  headers.txt  init_plan.json  inspect_db.py  migrate.py  old_app.py  old_app_utf8.py  seed_shifts.py  verify_shifts.py
(+150 files in other folders)
