[project]
name = "time-attendance-machine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altgraph==0.17.5",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "bcrypt==3.2.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "colorama==0.4.6",
    "cryptography==46.0.6",
    "ecdsa==0.19.2",
    "et-xmlfile==2.0.0",
    "fastapi==0.135.3",
    "future==1.0.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "packaging==26.0",
    "pandas==3.0.2",
    "passlib==1.7.4",
    "pefile==2024.8.26",
    "pluggy==1.6.0",
    "pyasn1==0.6.3",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.4",
    "pyngrok==8.0.0",
    "pyodbc==5.3.0",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.24",
    "pywin32-ctypes==0.2.3",
    "pyyaml==6.0.3",
    "pyzk==0.9",
    "requests==2.33.1",
    "rsa==4.9.1",
    "setuptools==82.0.1",
    "six==1.17.0",
    "sqlalchemy==2.0.49",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2026.1",
    "urllib3==2.6.3",
    "uvicorn==0.43.0",
    "websockets==16.0",
    "xlsxwriter==3.2.9",
]
